Portfolio descriptions and buttons done + Fix close modal button for something more visible

--- a/css/agency.css
+++ b/css/agency.css
@@ -270,33 +270,33 @@ header.masthead {
   position: absolute;
   top: 25px;
   right: 25px;
-  width: 75px;
-  height: 75px;
+  width: 65px;
+  height: 65px;
   cursor: pointer;
-  background-color: transparent; }
+  background-color: #fed136; }
   .portfolio-modal .close-modal:hover {
     opacity: 0.3; }
   .portfolio-modal .close-modal .lr {
     /* Safari and Chrome */
     z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
+    width: 3px;
+    height: 65px;
+    margin-left: 31px;
     /* IE 9 */
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-    background-color: #222222; }
+    background-color: #ffffff; }
     .portfolio-modal .close-modal .lr .rl {
       /* Safari and Chrome */
       z-index: 1052;
-      width: 1px;
-      height: 75px;
+      width: 3px;
+      height: 65px;
       /* IE 9 */
       -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
       transform: rotate(90deg);
-      background-color: #222222; }
+      background-color: #ffffff; }
 
 .portfolio-modal .modal-backdrop {
   display: none;
